--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -55,5 +55,33 @@
 	"footer": {
 		"copy": "Copyright by Joan Romero 2022",
 		"rights": "All rights reserved"
+	},
+	"web_access": {
+		"desc": "WebAccess is a website that has two tools to help web developers create more accessible content. The first tool is an automatic web accessibility evaluator, which allows evaluating HTML code by inserting the URL of a web page or the HTML code itself, applying up to 13 techniques proposed by the WCAG in its version 2.1. On the other hand, the second tool is a contrast evaluator, which allows knowing if the contrast ratio between two colors (text and background) meets any of the levels established by the WCAG.",
+		"visit": "View",
+		"stack": {
+			"desc": "On the frontend side, I used React as the base framework, managing the state of the application with hooks and with Jotai due to its simplicity to control the state, avoiding unnecessary rerendering and using SASS for the styles. The backend, on the other hand, is made up of an Express server, using a library called Cheerio to analyze HTML code and perform the evaluation, which has a simple api to manipulate the DOM of an HTML document."
+		},
+		"origin": {
+			"title": "Idea origin",
+			"desc": "The idea of ​​developing an automatic accessibility evaluation tool arose when I was looking for topics to focus on for my thesis at university. At that time I was learning web development in a self-taught way and I noticed that many times the subject of accessibility was omitted or was dealt with in a very poor and general way, so I decided to focus my thesis on this topic. In this way, I began to investigate automatic accessibility evaluation tools and noticed that it was feasible to make a prototype, so I focused my thesis on its development. This first version was focused on visual disabilities and the graphical interfaces were developed using a library called EJS which allows inserting JavaScript code into HTML. Later, to consolidate the knowledge I acquired of both React and web development in general, I decided to make this second version, improving the quality of the initial prototype."
+		},
+		"development": {
+			"title": "Development process",
+			"f_desc": "The first step to develop this project was to analyze and filter the techniques proposed by the WCAG related to HTML and that could be applied with the Cheerio library. Subsequently, I began to develop the backend, made up of a server that has a REST api with a route to evaluate by URL and another to evaluate HTML code directly, in addition to each of the functions that represent the selected WCAG techniques. It is also important to highlight that you perform unit tests on each of the functions that represent a technique, in addition to integration tests on each of the api routes.",
+			"s_desc": "As for the frontend, I started by making a preliminary design in Figma, selecting the color palette and the font styles and sizes that I use as a guide to develop the user interface with React and SASS. In this way, the first screens developed were the homepage and the page to select the type of accessibility evaluation. Later, I developed the results screen, in addition to the hooks and the context in charge of handling the status of the request to the api. Finally, develop the contrast evaluation screen as well as the necessary hooks to control its state."
+		},
+		"challenges": {
+			"title": "Challenges during development",
+			"desc": "Regarding the backend, the main challenge I found was related to how to perform the functions to apply each WCAG technique with the Cheerio library in the most efficient way possible to avoid long API response times. On the other hand, One of the aspects that cost me the most during the development of the frontend was deciding how to structure some components to avoid re-rendering problems that can arise when using React's Context api to handle state. Finally, it was also a challenge to decide when it was correct to abstract a component in order to reuse its behavior or its styles."
+		},
+		"learning": {
+			"title": "Learning",
+			"f_desc": "During the development of the project I learned many important practices. For example, that it will always be better to have simple code, so you should not be obsessed with efficiency in the early stages of the project and you should only abstract functions, modules or components when you notice that the code has been repeated at least three times. Sometimes, since if the opposite of these practices is carried out, there is a tendency to apply over-engineering and write more complex code than necessary.",
+			"s_desc": "In addition, I learned to perform unit and integration tests, as well as to better understand the operation of the Context api and rendering in React. Finally, I learned the importance of writing more semantic HTML code, along with other aspects related to web accessibility."
+		},
+		"projects": {
+			"title": "Another projects"
+		}
 	}
 }
